# gtranslatorapi

./: README.md  g_api.py  pyproject.toml
.github/workflow/: python_publish.xml
.github/workflows/: python-publish.yml
