[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "G_Translator_API"
version = "1.0.0"
description = "A Goole Translator Api wrapper for Python"
authors = [
    { name = "Mr_White", email = "smsatadalmondal420@gmail.com" }
]
license = { text = "GPL-v3" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
]
